Change Postgresql to MYSQL

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,9 @@ dependencies {
 	implementation 'org.hamcrest:hamcrest-library:2.2'
 	implementation 'org.hamcrest:hamcrest:2.2'
 	compileOnly 'org.projectlombok:lombok'
-  implementation 'org.postgresql:postgresql:42.5.1'
+  //implementation 'org.postgresql:postgresql:42.5.1'
+	implementation 'mysql:mysql-connector-java:8.0.32'
+	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
