--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
       add-mappings: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
       use-new-id-generator-mappings: true
     show-sql: true
     properties:
@@ -19,6 +19,7 @@ spring:
         format_sql: true
         use_sql_comments: true
         default_schema: movieapi
+    #   default_schema: test  # Postgresql
 
   datasource:
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
