--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,12 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.data:spring-data-elasticsearch:4.4.6'
+	implementation 'co.elastic.clients:elasticsearch-java:7.17.8'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+	implementation 'jakarta.json:jakarta.json-api:2.0.1'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.17.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
