--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-quartz:3.0.4'
 	implementation 'org.springframework.data:spring-data-elasticsearch:4.4.6'
 	implementation 'co.elastic.clients:elasticsearch-java:7.17.8'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
